--- a/css/estilos.css
+++ b/css/estilos.css
@@ -80,7 +80,7 @@ nav ul li a{
 .nav_mod{
     height: 70px;
     box-shadow: 1px 1px 10px 0px #00000010;
-    background: #fff;
+    background: #ffffff;
 }
 
 .nav_mod a{
@@ -202,6 +202,7 @@ nav ul li a{
 .cover .container__info{
     max-width: 400px;
     margin-top: 40px;
+    margin-left: 30px;
     z-index: 2;
 }
 
@@ -219,8 +220,7 @@ nav ul li a{
     margin-top: -30px;
 }
 
-.cover p{
-    margin-top: 10px;
+.cover h3{
     color: #fff;
 }
 
@@ -250,7 +250,7 @@ nav ul li a{
     position: absolute;
     bottom: 10px;
     right: 0px;
-    width: 600px;
+    width: 400px;
     transition: all 300ms;
     animation: move_vector 6s ease-in-out infinite;
 }
@@ -497,9 +497,10 @@ footer{
 }
 
 .box__footer{
+    margin-left: 10px;
     display: flex;
     flex-direction: column;
-    padding: 40px;
+    padding: 10px;
 }
 
 .box__footer .logo img{
@@ -516,7 +517,7 @@ footer{
 }
 
 .box__footer h2{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     color: #242424;
     font-weight: 700;
 }
