--- a/css/estilos.css
+++ b/css/estilos.css
@@ -111,6 +111,20 @@ nav ul li a{
     display: none;
 }
 
+#btn__catalogo{
+    color: white;
+    font-size: large;
+    background-color: #7d7d7d;
+    width: 200px;
+    border-radius: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+
+
+
+
 .btn__menu:hover{
     background: #f5f5f5;
 }
@@ -288,15 +302,16 @@ nav ul li a{
 
     nav{
         height: 100%;
-        background: #F1FAFF;
+        background:linear-gradient(153deg, rgba(0,255,205,1) 0%, rgba(255,0,202,1) 100%);
         position: fixed;
         top: 0;
         right: -180px;
         padding: 0px 40px;
-        transition: all 300ms;
+        transition: all 600ms;
     }
 
     .move_nav{
+        padding: 40px;
         right: 0px;
     }
 
@@ -305,13 +320,73 @@ nav ul li a{
     }
 
     nav ul li{
-        margin: 20px 0px;
+        margin: 10px 0px;
+
+    }
+    #btn__catalogo{
+        width: 150px;
+        position: absolute;
+        right: 9px;
+        top: 30px;
+        color: white;
+        font-size: large;
+        background-color: #656565;
+        border-radius: 10px;
+        padding: 10px;
+        cursor: pointer;
     }
 
     .container__vector img{
         transform: scale(0);
         animation: none;
     }
+    .container__cover{
+        margin-left: -30px;
+    }
+    
+    .cover .container__info{
+        max-width: 200px;
+        margin-top: 5px;
+        margin-left: 30px;
+        z-index: 2;
+    }
+    .cover h1{
+        color: #fff;
+    }
+    
+    .cover h2{
+        font-size: 50px;
+        color: #FEBA0B;
+        margin-top: -40px;
+    }
+    
+    .cover h3{
+        margin-top: -20px;
+        font-size: 30px;
+        color: #fff;
+    }
+        
+    .container__vector img{
+        position: absolute;
+        bottom: -60px;
+        right: -50px;
+        width: 300px;
+        transition: all 300ms;
+        animation: move_vector 6s ease-in-out infinite;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
 
