--- a/css/estilos.css
+++ b/css/estilos.css
@@ -144,7 +144,7 @@ nav ul li a{
 .bg_color{
     width: 100%;
     height: 70%;
-    background: #2196f3;
+    background: #a200ff;
     position: absolute;
     top: 0;
 }
