ingreso de segunda img a carrusel

--- a/css/EstiloCard.Productos.css
+++ b/css/EstiloCard.Productos.css
@@ -59,9 +59,10 @@
 }
 
 .producto {
-	width: 200px;
+	width: 100px;
+	
 	vertical-align: top;
-	background: #fff;
+	background: #eeeeee;
 	padding: 10px 0 20px 0;
 	margin-right: 20px;
 	border-radius: 20px;
@@ -75,6 +76,9 @@
 
 .producto .contenedor-imagen img {
 	width: 100%;
+	border-radius: 10px;
+	margin-top: -5px;
+	
 }
 
 .producto .contenedor-imagen .link {
