--- a/css/EstiloCard.Productos.css
+++ b/css/EstiloCard.Productos.css
@@ -70,12 +70,13 @@
 }
 
 .producto .contenedor-imagen {
-	min-height: 220px;
+	min-height: 110px;
 	position: relative;
 }
 
 .producto .contenedor-imagen img {
 	width: 100%;
+	
 	border-radius: 10px;
 	margin-top: -5px;
 	
@@ -86,8 +87,8 @@
 	left: 0;
 	top: 0;
 	z-index: 9;
-	width: 100%;
-	height: 100%;
+	width: 80%;
+	height: 80%;
 }
 
 .producto .contenedor-imagen .img-hover {
@@ -115,7 +116,7 @@
 .producto .datos h3 a {
 	text-decoration: none;
 	color: #2b2b2b;
-	font-size: 14px;
+	font-size: 20px;
 	display: block;
 	text-transform: uppercase;
 }
@@ -158,14 +159,15 @@
 	font-weight: 600;
 }
 
+
 .producto .precios div.internet span {
 	font-weight: bold;
-	font-size: 23px;
-	color: #ff0808;
+	font-size: 17px;
+	color: #828282;
 }
 
 .producto .precios div span {
-	font-size: 17px;
+	font-size: 30px;
 	font-weight: 600;
 }
 
@@ -180,11 +182,14 @@
 	color: #fff;
 	text-decoration: none;
 	display: none;
-	transition: all ease-in-out 0.3s;
+	transition: all ease-in-out 0.5s;
 }
 
 .producto .btn-carrito:hover {
 	transform: scale(1.05);
+	width: 200px;
+	color: white;
+	border: rgb(255, 149, 0) solid 4px;
 }
 
 .producto:hover .btn-carrito {
@@ -262,5 +267,8 @@
 	.titulo .shape {
 		padding: 10px 10px;
 		max-width: 160px;
+	}
+	.reseller{
+		color: #03cdff;
 	}
 }
