--- a/css/EstiloCard.Productos.css
+++ b/css/EstiloCard.Productos.css
@@ -58,16 +58,7 @@
 	font-weight: 600;
 }
 
-.producto {
-	width: 100px;
-	
-	vertical-align: top;
-	background: #eeeeee;
-	padding: 10px 0 20px 0;
-	margin-right: 20px;
-	border-radius: 20px;
-2
-}
+
 
 .producto .contenedor-imagen {
 	min-height: 110px;
@@ -188,9 +179,7 @@
 	padding-left: 30px;
 	line-height: 1.1em;	
 }
-.normal small{
-	color: white;
-}
+
 
 .producto .btn-carrito {
 	display: block;
@@ -212,6 +201,7 @@
 	color: white;
 	border: rgb(255, 149, 0) solid 4px;
 }
+
 
 .producto:hover .btn-carrito {
 	display: block;
@@ -269,6 +259,16 @@
 .slick-next:hover,
 .slick-prev:hover {
 	opacity: 0.8;
+}
+
+
+.producto {
+	width: 50%;
+	vertical-align: top;
+	background: #eeeeee;
+	padding: 10px 0 20px 0;
+	margin-right: 20px;
+	border-radius: 20px;
 }
 
 @media screen and (max-width: 650px) {
