--- a/css/estilos.css
+++ b/css/estilos.css
@@ -114,7 +114,7 @@ nav ul li a{
 #btn__catalogo{
     color: white;
     font-size: large;
-    background-color: #7d7d7d;
+    background-color: #ff9900;
     width: 200px;
     border-radius: 20px;
     padding-top: 10px;
@@ -302,7 +302,7 @@ nav ul li a{
 
     nav{
         height: 100%;
-        background:linear-gradient(153deg, rgba(0,255,205,1) 0%, rgba(255,0,202,1) 100%);
+        background:linear-gradient(153deg, rgb(163, 4, 203) 0%, rgba(255,0,202,1) 100%);
         position: fixed;
         top: 0;
         right: -180px;
@@ -329,8 +329,8 @@ nav ul li a{
         right: 9px;
         top: 30px;
         color: white;
-        font-size: large;
-        background-color: #656565;
+        font-size: small;
+        background-color: #ff9900;
         border-radius: 10px;
         padding: 10px;
         cursor: pointer;
