--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,6 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     text-decoration: none;
     list-style: none;
 }
@@ -96,7 +95,7 @@ nav ul li a{
 }
 
 .select{
-    background: #359EF9;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(109,10,167,1) 35%, rgba(5,44,52,1) 100%);
     padding: 10px 30px;
     color: white;
     border-radius: 20px;
@@ -118,7 +117,7 @@ nav ul li a{
 #btn__catalogo{
     color: white;
     font-size: large;
-    background-color: #ff9900;
+    background-color: #000000;
     width: 200px;
     border-radius: 20px;
     padding-top: 10px;
@@ -211,7 +210,7 @@ nav ul li a{
     justify-content: space-between;
     position: relative;
 
-    *background-image: url(../images/background-cover.svg);
+   
     background-size: cover;
     background-position: bottom;
 }
@@ -235,7 +234,8 @@ nav ul li a{
     font-size: 60px;
     font-weight: 900;
     color: #FEBA0B;
-    margin-top: -30px;
+    font-family: cursive;
+    margin-top: -20px;
 }
 
 .cover h3{
@@ -306,12 +306,13 @@ nav ul li a{
 
     nav{
         height: 100%;
-        background:linear-gradient(153deg, rgb(163, 4, 203) 0%, rgba(255,0,202,1) 100%);
+        background:linear-gradient(153deg, rgb(165, 165, 165) 0%, rgb(150, 150, 150) 100%);
         position: fixed;
         top: 0;
-        right: -170px;
+        right: -160px ;
         padding: 0px 20px;
-        transition: all 600ms;
+        transition: all 00ms;
+        box-shadow: 0 0 6px black;
     }
 
     .move_nav{
@@ -330,7 +331,7 @@ nav ul li a{
     #btn__catalogo{
         width: 150px;
         position: absolute;
-        right: 9px;
+        margin-left: -65px;
         top: 30px;
         color: white;
         font-size: small;
@@ -357,18 +358,12 @@ nav ul li a{
     .cover h1{
         color: #fff;
     }
-    
-    .cover h2{
+    .cover h2 {
         font-size: 50px;
         color: #FEBA0B;
-        margin-top: -40px;
-    }
-    
-    .cover h3{
-        margin-top: -20px;
-        font-size: 30px;
-        color: #fff;
-    }
+        margin-top: -30px;
+        animation: escribir 2s linear infinite;
+      }
         
     .container__vector img{
         position: absolute;
