--- a/css/estilos.css
+++ b/css/estilos.css
@@ -335,7 +335,7 @@ nav ul li a{
         top: 30px;
         color: white;
         font-size: small;
-        background-color: #ff9900;
+        background-color: #757575;
         border-radius: 10px;
         padding: 10px;
         cursor: pointer;
