--- a/paginas/registro/registro.css
+++ b/paginas/registro/registro.css
@@ -5,65 +5,76 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background: linear-gradient(119deg, rgba(2,0,36,1) 0%, rgba(10,87,102,1) 53%, rgba(0,0,0,1) 100%);
+}
+
+hr{
+    margin: 20px;
 }
 form{
-    box-shadow: 0 0 20px rgba(0,0, 0, 0.2);
-    padding: 30px 35px;
+    box-shadow: 0 0 20px rgba(169, 5, 163, 0.5);
+    padding: 10px 25px;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
     text-align: center;
     width: 320px;
+    height: 600px;
+    background-color: #f4f4f4;
 }
 
 form h2{
     font-size: 30px;
-    color: #0D0D0D;
+    color: #c800ff;
     margin: 0;
 }
-form small {
+form small{
     font-size: 10px;
-    color: #5E5E5E;
+    color: #000000;
     margin-top: 20px;
-    margin-bottom: 50px;
+    padding-bottom: 20px;
 }
 .input-wrapper{
     position: relative;
     width: 260px;
     margin-bottom: 10px;
+    margin-left: 5px;
 }
 
 input{
     color: #0D0D0D;
-    padding: 15px 15px 15px 50px;
+    padding: 15px 5px 10px 50px;
     width: 100%;
     border-radius: 25px;
     border: 0;
-    box-shadow: 0 0 20px rgba(192,203, 251, 0.7);
+    box-shadow: 0 0 20px rgba(192,203, 251, 0.5);
     outline: none;
-    font-size: 16px;
+    font-size: 10px;
+
 }
 
 input::placeholder{
     
     font-weight: bold;
-    font-size: 16px;
+    font-size: 13px;
     color: rgb(115, 0, 255);
 }
 
 .input-icon{
     position: absolute;
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     left: 20px;
     top: 50%;
     transform: translateY(-55%);
 }
 .btn{
-    width: 120px;
-    margin-top: 20px;
-    padding: 10px;
-    background-color: aqua;
+    
+    width: 160px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    padding: 5px;
+    background: linear-gradient(151deg, rgba(102,16,125,1) 0%, rgba(200,0,255,1) 53%, rgba(102,16,125,1) 100%);
     box-shadow: 0 0 20px rgb(159, 158, 158);
     color: white;
     font-size: 20px;
@@ -89,6 +100,10 @@ input::placeholder{
         font-size: 18px;
 }
 
+.span_form{
+    padding-top: 5px;
+}
+
 @media(max-width:991px){
     body{
         padding: 10px;
@@ -96,7 +111,7 @@ input::placeholder{
     form{
         padding: 20px;
         width: 80%;
-        border: 1px solid black;
+        border: 1px solid rgb(106, 0, 136), 0, 0);
     }
     .input-wrapper{
         position: relative;
@@ -105,13 +120,14 @@ input::placeholder{
     }
     input{
         padding: 10px 0px 10px 45px;
+
     }
     .input-icon{
-        height: 20px;
-        width: 20px;
+        height: 15px;
+        width: 15px;
     }
     .btn{
-        width: 120px;
-        margin-top: 60px;
-        padding: 10px;       
+        width: 240px;
+        margin-top: 20px;
+        padding: 5px;       
 }
