--- a/paginas/registro/registro.css
+++ b/paginas/registro/registro.css
@@ -10,7 +10,10 @@ body{
 
 hr{
     margin: 20px;
+
 }
+
+
 form{
     box-shadow: 0 0 20px rgba(169, 5, 163, 0.5);
     padding: 10px 25px;
@@ -19,8 +22,9 @@ form{
     flex-direction: column;
     text-align: center;
     width: 320px;
-    height: 600px;
+    height: 650px;
     background-color: #f4f4f4;
+    
 }
 
 form h2{
@@ -70,9 +74,10 @@ input::placeholder{
 }
 .btn{
     
-    width: 160px;
+    width: 360px;
     margin-top: 10px;
     margin-bottom: 5px;
+    margin-left: 20px;
     padding: 5px;
     background: linear-gradient(151deg, rgba(102,16,125,1) 0%, rgba(200,0,255,1) 53%, rgba(102,16,125,1) 100%);
     box-shadow: 0 0 20px rgb(159, 158, 158);
@@ -111,8 +116,27 @@ input::placeholder{
     form{
         padding: 20px;
         width: 80%;
-        border: 1px solid rgb(106, 0, 136), 0, 0);
+        border: 3px solid magenta;
+        animation: luz 5s linear infinite;
     }
+    @keyframes luz {
+        0% {
+          border-color: magenta;
+        }
+        20% {
+          border-color: yellow;
+        }
+        60% {
+          border-color: rgb(0, 251, 255);
+        }
+        80% {
+            border-color: magenta;
+          }
+      }
+
+
+
+
     .input-wrapper{
         position: relative;
         width: 80%;
