arreglo del frontend btn registro y cover

--- a/css/botones.css
+++ b/css/botones.css
@@ -89,9 +89,9 @@
     width: 120px;
     height: 30px;
     border-radius: 20px;
-    background-color: #5d5d5d;
     color: #fff;
     font-size: 15px;
+    margin-top: 30px;
     animation: boton-desplazandose 1s ease-in-out infinite;
   }
 }
