--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -11,14 +11,14 @@
 }
 
 
-.container_all{
+.container_all {
     position: relative;
     right: 0;
     transition: all 300ms;
 }
 
 
-header{
+header {
     width: 100%;
     height: 100px;
     font-family: 'Poppins', sans-serif;
@@ -29,12 +29,12 @@ header{
     transition: all 300ms;
 }
 
-.move_content{
+.move_content {
     right: 180px;
 }
 
 
-.container__header{
+.container__header {
     max-width: 1200px;
     height: 100%;
     display: flex;
@@ -43,65 +43,65 @@ header{
     padding: 0px 20px;
 }
 
-header .logo{
+header .logo {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-header .logo img{
+header .logo img {
     width: 150px;
 }
 
-.container__nav{
+.container__nav {
     position: relative;
     height: 100%;
-    
+
 }
 
-nav{
+nav {
     height: 100%;
 }
 
-nav ul{
+nav ul {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-nav ul li{
+nav ul li {
     margin: 0px 20px;
 }
 
-nav ul li a{
+nav ul li a {
     color: #fff;
     font-size: 14px;
 }
 
-.nav_mod{
+.nav_mod {
     height: 70px;
     box-shadow: 1px 1px 10px 0px #00000010;
     background: #ffffff;
 }
 
-.nav_mod a{
+.nav_mod a {
     color: #373737;
 }
 
-.nav_mod .select{
+.nav_mod .select {
     color: white;
 }
 
-.select{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(109,10,167,1) 35%, rgba(5,44,52,1) 100%);
+.select {
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(109, 10, 167, 1) 35%, rgba(5, 44, 52, 1) 100%);
     padding: 10px 30px;
     color: white;
     border-radius: 20px;
 }
 
-.btn__menu{
+.btn__menu {
     width: 50px;
     height: 50px;
     font-size: 20px;
@@ -114,7 +114,7 @@ nav ul li a{
     display: none;
 }
 
-#btn__catalogo{
+#btn__catalogo {
     color: white;
     font-size: large;
     background-color: #000000;
@@ -128,13 +128,13 @@ nav ul li a{
 
 
 
-.btn__menu:hover{
+.btn__menu:hover {
     background: #f5f5f5;
 }
 
 /*COVER*/
 
-.cover{
+.cover {
     width: 100%;
     padding-bottom: 120px;
     font-family: 'Poppins', sans-serif;
@@ -144,7 +144,7 @@ nav ul li a{
 }
 
 /*WAVE INICIO*/
-.bg_color{
+.bg_color {
     width: 100%;
     height: 70%;
     background: #a200ff;
@@ -152,7 +152,7 @@ nav ul li a{
     top: 0;
 }
 
-.wave{
+.wave {
     width: 6000px;
     height: 100%;
     position: absolute;
@@ -162,12 +162,12 @@ nav ul li a{
     background-repeat: repeat-x;
 }
 
-.w1{
+.w1 {
     background-image: url(../images/wd1.svg);
     animation: w1 7s linear infinite;
 }
 
-.w2{
+.w2 {
     background-image: url(../images/wd1.svg);
     animation: w2 7s linear -.125s infinite, swell 7s ease -.125s infinite;
     opacity: 0.5;
@@ -176,33 +176,38 @@ nav ul li a{
 @keyframes w1 {
     0% {
         margin-left: 0;
-      }
-      100% {
+    }
+
+    100% {
         margin-left: -1600px;
-      }
+    }
 }
 
 @keyframes w2 {
     0% {
         margin-left: 0;
-      }
-      100% {
+    }
+
+    100% {
         margin-left: -1600px;
-      }
+    }
 }
 
 @keyframes swell {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: translateY(-25px);
-      }
-      50% {
+    }
+
+    50% {
         transform: translateY(10px);
-      }
-  }
+    }
+}
 
-  /*WAVE FINAL*/
+/*WAVE FINAL*/
 
-.container__cover{
+.container__cover {
     max-width: 1200px;
     margin: auto;
     padding: 20px;
@@ -210,27 +215,27 @@ nav ul li a{
     justify-content: space-between;
     position: relative;
 
-   
+
     background-size: cover;
     background-position: bottom;
 }
 
 
-.cover .container__info{
+.cover .container__info {
     max-width: 400px;
     margin-top: 40px;
     margin-left: 30px;
     z-index: 2;
 }
 
-.cover h1{
+.cover h1 {
     max-width: 400px;
     font-size: 60px;
     font-weight: 900;
     color: #fff;
 }
 
-.cover h2{
+.cover h2 {
     font-size: 60px;
     font-weight: 900;
     color: #FEBA0B;
@@ -238,11 +243,11 @@ nav ul li a{
     margin-top: -20px;
 }
 
-.cover h3{
+.cover h3 {
     color: #fff;
 }
 
-.cover input[type="button"]{
+.cover input[type="button"] {
     padding: 10px 40px;
     margin-top: 40px;
     font-size: 18px;
@@ -256,79 +261,82 @@ nav ul li a{
     transition: box-shadow 500ms;
 }
 
-.cover input[type="button"]:hover{
+.cover input[type="button"]:hover {
     box-shadow: 1px 1px 30px -5px #20202085;
 }
 
-.container__vector{
+.container__vector {
     position: relative;
 }
 
-.container__vector img{
+.container__vector img {
     position: absolute;
-    bottom: 10px;
+    bottom: -100px;
     right: 0px;
-    width: 400px;
+    width: 600px;
     transition: all 300ms;
     animation: move_vector 6s ease-in-out infinite;
 }
 
-@keyframes move_vector{
-    0%{
+@keyframes move_vector {
+    0% {
         transform: translateY(10px);
     }
-    25%{
+
+    25% {
         transform: translateY(-10px);
     }
-    100%{
+
+    100% {
         transform: translateY(10px);
     }
 }
 
-@media screen and (max-width: 920px){
+@media screen and (max-width: 920px) {
 
-    .container__vector img{
+    .container__vector img {
         width: 500px;
     }
 }
 
-@media screen and (max-width: 760px){
+@media screen and (max-width: 760px) {
 
-    .container__nav{
-       display: flex;
-       justify-content: center;
-       align-items: center;
+    .container__nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    .btn__menu{
+    .btn__menu {
         display: flex;
     }
 
-    nav{
+    nav {
         height: 100%;
-        background:linear-gradient(153deg, rgb(165, 165, 165) 0%, rgb(150, 150, 150) 100%);
+        background: linear-gradient(153deg, rgb(165, 165, 165) 0%, rgb(150, 150, 150) 100%);
         position: fixed;
         top: 0;
-        right: -160px ;
+        right: -160px;
         padding: 0px 20px;
         transition: all 00ms;
         box-shadow: 0 0 6px black;
     }
 
-    .move_nav{
+    .move_nav {
         padding: 10px;
         right: 20px;
     }
 
-    nav ul{
+    nav ul {
         flex-direction: column;
     }
 
-    nav ul li{
+    nav ul li {
         margin: 20px 0px;
 
     }
-    #btn__catalogo{
+
+    #btn__catalogo {
         width: 150px;
         position: absolute;
         margin-left: -65px;
@@ -341,33 +349,45 @@ nav ul li a{
         cursor: pointer;
     }
 
-    .container__vector img{
+    .container__vector img {
         transform: scale(0);
         animation: none;
     }
-    .container__cover{
+
+    .container__cover {
         margin-left: -30px;
     }
-    
-    .cover .container__info{
+
+    .cover .container__info {
         max-width: 200px;
         margin-top: 5px;
         margin-left: 30px;
         z-index: 2;
     }
-    .cover h1{
+
+    .cover h1 {
         color: #fff;
+        font-size: 45px;
+       
     }
+
     .cover h2 {
         font-size: 50px;
         color: #FEBA0B;
         margin-top: -30px;
-        animation: escribir 2s linear infinite;
-      }
-        
-    .container__vector img{
+
+    }
+
+    .cover small {
+        font-size: 16px;
+        color: #a5a5a5;
+        margin-top: -30px;
+
+    }
+
+    .container__vector img {
         position: absolute;
-        bottom: -60px;
+        bottom: -120px;
         right: -50px;
         width: 300px;
         transition: all 300ms;
@@ -398,7 +418,7 @@ nav ul li a{
 
 /*INICIO DE LAS CARD*/
 
-.container__card{
+.container__card {
     max-width: 1200px;
     padding: 20px;
     padding-bottom: 40px;
@@ -409,7 +429,7 @@ nav ul li a{
     justify-content: center
 }
 
-.card{
+.card {
     width: 300px;
     position: relative;
     margin: 20px;
@@ -418,22 +438,22 @@ nav ul li a{
     border-radius: 20px;
 }
 
-.card:hover{
+.card:hover {
     box-shadow: 1px 1px 20px -10px #20202049;
 }
 
-.card:hover .info__description{
+.card:hover .info__description {
     margin-top: 0;
     border-radius: 0px 0px 20px 20px;
 
 }
 
-.card:hover .icon{
+.card:hover .icon {
     margin-top: -110px;
     border-radius: 20px 20px 0px 0px;
 }
 
-.icon{
+.icon {
     width: 100%;
     height: 220px;
     background: #EFF3F5;
@@ -443,28 +463,28 @@ nav ul li a{
     align-items: center;
     position: relative;
     z-index: 1;
-    transition: all 400ms cubic-bezier(0.5,0,0,1);
+    transition: all 400ms cubic-bezier(0.5, 0, 0, 1);
     border-radius: 20px;
 }
 
-.icon i{
+.icon i {
     font-size: 150px;
     color: #fff;
-    transition: all 400ms cubic-bezier(0.5,0,0,1);
+    transition: all 400ms cubic-bezier(0.5, 0, 0, 1);
 }
 
-.info__description{
+.info__description {
     width: 100%;
     height: 220px;
     color: #474747;
     background: #EFF3F5;
     padding: 20px;
     margin-top: -220px;
-    transition: all 400ms cubic-bezier(0.5,0,0,1);
+    transition: all 400ms cubic-bezier(0.5, 0, 0, 1);
     border-radius: 20px;
 }
 
-.info__description p{
+.info__description p {
     font-size: 14px;
     margin-top: 10px;
     display: -webkit-box;
@@ -478,7 +498,7 @@ nav ul li a{
     overflow: hidden;
 }
 
-.info__description input{
+.info__description input {
     margin-top: 20px;
     padding: 10px 40px;
     background: #2196f3;
@@ -492,48 +512,48 @@ nav ul li a{
     transition: box-shadow 300ms;
 }
 
-.info__description input:hover{
+.info__description input:hover {
     box-shadow: 1px 1px 30px -5px #20202070;
 }
 
 
 /*COLOR DE LAS CARD*/
 
-.c1:hover .icon{
+.c1:hover .icon {
     background: #DD4B25;
 }
 
-.c1 .icon i{
+.c1 .icon i {
     color: #DD4B25;
 }
 
-.c1:hover .icon i{
+.c1:hover .icon i {
     color: #fff;
 }
 
 
-.c2:hover .icon{
+.c2:hover .icon {
     background: #146EB0;
 }
 
-.c2 .icon i{
+.c2 .icon i {
     color: #146EB0;
 }
 
-.c2:hover .icon i{
+.c2:hover .icon i {
     color: #fff;
 }
 
 
-.c3:hover .icon{
+.c3:hover .icon {
     background: #E8B600;
 }
 
-.c3 .icon i{
+.c3 .icon i {
     color: #E8B600;
 }
 
-.c3:hover .icon i{
+.c3:hover .icon i {
     color: #fff;
 }
 
@@ -543,7 +563,7 @@ nav ul li a{
 
 
 /*AQUI COMIENZA EL FOOTER*/
-footer{
+footer {
     width: 100%;
     font-family: 'Nunito', sans-serif;
     background-color: var(--color-esqueleto);
@@ -556,7 +576,7 @@ footer{
     mask-size: cover;*/
 }
 
-.container__footer{
+.container__footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -565,18 +585,18 @@ footer{
     padding-top: 100px;
 }
 
-.box__footer{
+.box__footer {
     margin-left: 10px;
     display: flex;
     flex-direction: column;
     padding: 10px;
 }
 
-.box__footer .logo img{
+.box__footer .logo img {
     width: 180px;
 }
 
-.box__footer .terms{
+.box__footer .terms {
     max-width: 350px;
     margin-top: 20px;
     font-weight: 500;
@@ -585,39 +605,39 @@ footer{
 
 }
 
-.box__footer h2{
+.box__footer h2 {
     margin-bottom: 10px;
     color: #242424;
     font-weight: 700;
 }
 
-.box__footer a{
+.box__footer a {
     margin-top: 10px;
     color: #7a7a7a;
     font-weight: 600;
 }
 
-.box__footer a:hover{
+.box__footer a:hover {
     opacity: 0.8;
 }
 
-.box__footer a .fab{
+.box__footer a .fab {
     font-size: 20px;
 }
 
-.box__copyright{
+.box__copyright {
     max-width: 1200px;
     margin: auto;
     text-align: center;
     padding: 0px 40px;
 }
 
-.box__copyright p{
+.box__copyright p {
     margin-top: 20px;
     color: #7a7a7a;
 }
 
-.box__copyright hr{
+.box__copyright hr {
     border: none;
     height: 1px;
     background-color: #7a7a7a;
@@ -627,27 +647,28 @@ footer{
 
 
 /* css anuncios Pup UP*/
-.blanco{
+.blanco {
 
     color: white;
 
 }
-.boton__cotizar{
+
+.boton__cotizar {
     color: white;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
     background-color: #146EB0;
-    
+
 
 
 }
 
-.contruccion{
- position: relative;
+.contruccion {
+    position: relative;
 
- padding: 120px;
- text-align: center;
+    padding: 120px;
+    text-align: center;
 
 
 
