--- a/paginas/registro/registro.css
+++ b/paginas/registro/registro.css
@@ -1,20 +1,20 @@
-body{
+body {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(119deg, rgba(2,0,36,1) 0%, rgba(10,87,102,1) 53%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(119deg, rgba(2, 0, 36, 1) 0%, rgba(10, 87, 102, 1) 53%, rgba(0, 0, 0, 1) 100%);
 }
 
-hr{
+hr {
     margin: 20px;
 
 }
 
 
-form{
+form {
     box-shadow: 0 0 20px rgba(169, 5, 163, 0.5);
     padding: 10px 25px;
     border-radius: 25px;
@@ -24,47 +24,49 @@ form{
     width: 320px;
     height: 650px;
     background-color: #f4f4f4;
-    
+
 }
 
-form h2{
+form h2 {
     font-size: 30px;
     color: #c800ff;
     margin: 0;
 }
-form small{
+
+form small {
     font-size: 10px;
     color: #000000;
     margin-top: 20px;
     padding-bottom: 20px;
 }
-.input-wrapper{
+
+.input-wrapper {
     position: relative;
     width: 260px;
     margin-bottom: 10px;
     margin-left: 5px;
 }
 
-input{
+input {
     color: #0D0D0D;
     padding: 15px 5px 10px 50px;
     width: 100%;
     border-radius: 25px;
     border: 0;
-    box-shadow: 0 0 20px rgba(192,203, 251, 0.5);
+    box-shadow: 0 0 20px rgba(192, 203, 251, 0.5);
     outline: none;
     font-size: 10px;
 
 }
 
-input::placeholder{
-    
+input::placeholder {
+
     font-weight: bold;
     font-size: 13px;
     color: rgb(115, 0, 255);
 }
 
-.input-icon{
+.input-icon {
     position: absolute;
     height: 15px;
     width: 15px;
@@ -72,86 +74,120 @@ input::placeholder{
     top: 50%;
     transform: translateY(-55%);
 }
-.btn{
-    
+
+.btn {
+
     width: 360px;
     margin-top: 10px;
     margin-bottom: 5px;
     margin-left: 20px;
     padding: 5px;
-    background: linear-gradient(151deg, rgba(102,16,125,1) 0%, rgba(200,0,255,1) 53%, rgba(102,16,125,1) 100%);
+    background: linear-gradient(151deg, rgba(102, 16, 125, 1) 0%, rgba(200, 0, 255, 1) 53%, rgba(102, 16, 125, 1) 100%);
     box-shadow: 0 0 20px rgb(159, 158, 158);
     color: white;
     font-size: 20px;
     cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: rgb(255, 157, 0);
 }
 
-.success{
+.success {
+    background-color: rgb(189, 189, 189);
     position: absolute;
     top: 50px;
-    color: #00c83c;
+    color: #00ff4c;
+    font-size: 28px;
+    text-align: center;
+    background-color: rgb(189, 189, 189);
+    align-items: center;
+    align-content: center;
+}
+
+.error {
+    position: absolute;
+    top: 50px;
+    color: #e02d00;
+    font-size: 18px;
+}
+.error2{
+    position: absolute;
+    top: 50px;
+    color: rgb(180, 180, 180);
     font-size: 18px;
 }
 
-.error{
-    
-        position: absolute;
-        top: 50px;
-        color: #e02d00;
-        font-size: 18px;
-}
-
-.span_form{
+.span_form {
     padding-top: 5px;
 }
 
-@media(max-width:991px){
-    body{
+@media(max-width:991px) {
+    body {
         padding: 10px;
     }
-    form{
+
+    form {
         padding: 20px;
         width: 80%;
         border: 3px solid magenta;
         animation: luz 5s linear infinite;
     }
+
     @keyframes luz {
         0% {
-          border-color: magenta;
+            border-color: magenta;
         }
+
         20% {
-          border-color: yellow;
+            border-color: yellow;
         }
+
         60% {
-          border-color: rgb(0, 251, 255);
+            border-color: rgb(0, 251, 255);
         }
+
         80% {
             border-color: magenta;
-          }
-      }
+        }
+    }
 
 
 
 
-    .input-wrapper{
+    .input-wrapper {
         position: relative;
         width: 80%;
         margin-bottom: 5px;
     }
-    input{
+
+    input {
         padding: 10px 0px 10px 45px;
 
     }
-    .input-icon{
+
+    .input-icon {
         height: 15px;
         width: 15px;
     }
-    .btn{
+
+    .btn {
         width: 240px;
         margin-top: 20px;
-        padding: 5px;       
-}
+        padding: 5px;
+    }
+    .success {
+        margin-top: 300px;
+        right: 5px;
+        width: 350px;
+        height: 200px ;
+        border-radius: 20px;
+        position: absolute;
+        color: #2c2c2c;
+        font-size: 28px;
+        text-align: center;
+        background-color: rgb(189, 189, 189);
+        align-items: center;
+        align-content: center;
+    }
+  
