--- a/paginas/registro/registro.css
+++ b/paginas/registro/registro.css
@@ -34,7 +34,7 @@ form h2 {
 }
 
 form small {
-    font-size: 10px;
+    font-size: 14px;
     color: #000000;
     margin-top: 20px;
     padding-bottom: 20px;
@@ -62,7 +62,7 @@ input {
 input::placeholder {
 
     font-weight: bold;
-    font-size: 13px;
+    font-size: 20px;
     color: rgb(115, 0, 255);
 }
 
@@ -79,8 +79,8 @@ input::placeholder {
 
     width: 360px;
     margin-top: 10px;
-    margin-bottom: 5px;
-    margin-left: 20px;
+    margin-bottom: 15px;
+    margin-left: -20px;
     padding: 5px;
     background: linear-gradient(151deg, rgba(102, 16, 125, 1) 0%, rgba(200, 0, 255, 1) 53%, rgba(102, 16, 125, 1) 100%);
     box-shadow: 0 0 20px rgb(159, 158, 158);
@@ -89,7 +89,7 @@ input::placeholder {
     cursor: pointer;
 }
 
-.btn:hover {
+.btn :hover{
     background-color: rgb(255, 157, 0);
 }
 
@@ -119,7 +119,26 @@ input::placeholder {
 }
 
 .span_form {
-    padding-top: 5px;
+    margin-top: 30px;
+    right: 50px;
+    bottom: 50px;
+    font-size: 20px;
+    color: wheat;
+}
+
+
+.mensaje{
+    margin: 0 auto;
+    width: 350px;
+    font-size: 30px;
+    position: relative;
+   color: white;
+    border-radius: 20px;
+    right: -400px;
+    bottom: 650px;
+    padding: 120px 10px 30px 10px;          
+   
+
 }
 
 @media(max-width:991px) {
@@ -167,8 +186,8 @@ input::placeholder {
     }
 
     .input-icon {
-        height: 15px;
-        width: 15px;
+        height: 20px;
+        width: 20px;
     }
 
     .btn {
@@ -190,4 +209,24 @@ input::placeholder {
         align-items: center;
         align-content: center;
     }
-  
+    
+   
+
+    .mensaje{
+            margin: 0 auto;
+            width: 350px;
+            font-size: 25px;
+            position: relative;
+            border-radius: 20px;
+            right: 10px;
+            bottom: 500px;
+            color: #000000;
+            padding: 120px 10px 30px 10px;           
+
+    }
+    .span_form {
+        right: 50px;
+        bottom: 50px;
+        font-size: 16px;
+        color: rgb(0, 0, 0);
+    }
